--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1> Episode Finder</h1>
+  <h1> EpiFinder</h1>
 
   <div class="controls">
     <input type="text" id="showInput" placeholder="Search F.r.i.e.n.d.s" />
